practiques de conexio a base de dades i proves amb pygame

--- a/di/BaseDades/registre.glade
+++ b/di/BaseDades/registre.glade
@@ -691,7 +691,15 @@
           </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkTextView" id="textview">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
         </child>
         <child>
           <object class="GtkButton" id="button1">
