el login de usuari i creacio de nou usuari funciona!

--- a/AndroidStudioProjects/LoginApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/LoginApp/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:text="Eixir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
+        android:id="@+id/Salir"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
@@ -30,7 +30,7 @@
         android:text="Registrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
+        android:id="@+id/Registrar"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
