projecte de pmm fa el login i el registrar  i el dialog fragments

--- a/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_inici.xml
+++ b/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_inici.xml
@@ -10,4 +10,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philippe.projecte_pmm.Inici">
 
+    <TextView
+        android:text="Inici"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/inici"
+        android:textStyle="normal|bold"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/inici"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="11dp"
+        android:id="@+id/idUser" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/idUser"
+        android:layout_toEndOf="@+id/idUser"
+        android:layout_marginStart="33dp"
+        android:id="@+id/idPass" />
+
 </RelativeLayout>
