--- a/AndroidStudioProjects/BaseDeDatosSpinner/app/src/main/res/layout/activity_cliente.xml
+++ b/AndroidStudioProjects/BaseDeDatosSpinner/app/src/main/res/layout/activity_cliente.xml
@@ -24,9 +24,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
-    </LinearLayout><![CDATA[
-
-     
-
-]]>
+    </LinearLayout>
 </LinearLayout>
