--- a/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_spinner.xml
+++ b/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_spinner.xml
@@ -1,35 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_inici"
+    android:id="@+id/activity_spinner"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.philippe.projecte_pmm.Inici">
+    tools:context="com.example.philippe.projecte_pmm.Spinner">
 
-    <TextView
-        android:text="Inici"
+    <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inici"
-        android:textStyle="normal|bold"
-        android:textAlignment="center"
-        android:textSize="36sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp" />
-
-    <Button
-        android:text="Llistat Usuaris"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="40dp"
-        android:id="@+id/bsp" />
-
+        android:layout_marginTop="40dp"
+        android:id="@+id/spinner2" />
 </RelativeLayout>
