--- a/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/dialog_fragment.xml
+++ b/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/dialog_fragment.xml
@@ -51,15 +51,6 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/infoPass"
-        android:layout_alignBaseline="@+id/textView12"
-        android:layout_alignBottom="@+id/textView12"
-        android:layout_alignEnd="@+id/textView9" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/infoUser"
         android:layout_above="@+id/textView12"
         android:layout_alignStart="@+id/infoPass" />
@@ -123,4 +114,15 @@
         android:layout_marginTop="24dp"
         android:layout_below="@+id/textView12"
         android:layout_toStartOf="@+id/infoPass" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/infoPass"
+        android:inputType="textPassword"
+        android:layout_alignBaseline="@+id/textView12"
+        android:layout_alignBottom="@+id/textView12"
+        android:layout_toEndOf="@+id/textView12" />
+
 </RelativeLayout>
