--- a/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_registre.xml
+++ b/AndroidStudioProjects/Projecte_PMM/app/src/main/res/layout/activity_registre.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_registre"
     android:layout_width="match_parent"
@@ -9,59 +10,47 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philippe.projecte_pmm.Registre">
 
-    <TextView
-        android:text="Nou usuari"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:id="@+id/textView3"
-        android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Usuari: "
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
-        android:id="@+id/textView5"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        android:layout_below="@+id/textView3"
-        android:layout_alignEnd="@+id/textView6" />
+        android:inputType="textPersonName"
+        android:hint="usuari.."
+        android:ems="10"
+        android:id="@+id/nuser"
+        android:layout_alignBaseline="@+id/textView5"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5"
+        android:layout_marginStart="20dp" />
 
-    <TextView
-        android:text="Contrasenya: "
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:id="@+id/textView6"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true" />
+        android:inputType="textPassword"
+        android:hint="contrasenya..."
+        android:ems="10"
+        android:id="@+id/npass"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignStart="@+id/nuser" />
 
     <Button
         android:text="Guardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nguardar"
-        android:layout_marginBottom="58dp"
+        android:layout_marginBottom="25dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
         android:layout_above="@+id/nguardar"
         android:layout_alignParentStart="true">
 
 
         <TextView
-            android:text="Tipus d'usuaris: "
+            android:text="Tipus d'usuari: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tipus"
@@ -109,27 +98,59 @@
 
     </RadioGroup>
 
+    <TextView
+        android:text="Nou usuari"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textAppearance="@android:style/TextAppearance.Material.Title"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Usuari: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="106dp"
+        android:id="@+id/textView5"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignEnd="@+id/textView6" />
+
+    <TextView
+        android:text="Contrasenya: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/textView6"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
+        android:layout_below="@+id/nuser"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Nom:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/textView13"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
+        android:layout_above="@+id/nuser"
+        android:layout_toStartOf="@+id/nguardar" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="usuari.."
+        android:hint="nam..."
         android:ems="10"
-        android:id="@+id/nuser"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_toEndOf="@+id/textView5"
-        android:layout_marginStart="20dp" />
-
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="contrasenya..."
-            android:ems="10"
-            android:id="@+id/npass"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
+        android:layout_above="@+id/nuser"
+        android:layout_toEndOf="@+id/textView13"
+        android:id="@+id/nname"
         android:layout_alignStart="@+id/nuser" />
 
 </RelativeLayout>
