--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_factura.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_factura.xml
@@ -11,6 +11,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philippe.basedades.Factura">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/money21"
+        android:id="@+id/imageView6"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
+
     <TextView
         android:text="Factura "
         android:layout_width="match_parent"
@@ -22,18 +31,6 @@
         android:textSize="36sp"
         android:textAlignment="center"
         android:textStyle="normal|bold" />
-
-    <TextView
-        android:text="Dades del vehicle:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="49dp"
-        android:id="@+id/textView27"
-        android:layout_below="@+id/textView26"
-        android:layout_alignParentStart="true"
-        android:textStyle="normal|bold"
-        android:textSize="18sp" />
 
     <TextView
         android:text="Nº Dies:"
@@ -64,7 +61,7 @@
         android:layout_below="@+id/textView29"
         android:layout_alignStart="@+id/textView29"
         android:layout_marginTop="26dp"
-        android:id="@+id/textView30"
+        android:id="@+id/textView36"
         android:textSize="18sp"
         android:textStyle="normal|bold" />
 
@@ -75,4 +72,78 @@
         android:id="@+id/back"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dadesVehicle"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/textView27"
+        android:layout_alignBottom="@+id/textView27"
+        android:layout_toEndOf="@+id/textView27"
+        android:layout_marginStart="13dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView29"
+        android:layout_alignStart="@+id/dadesVehicle"
+        android:id="@+id/dies"
+        android:textSize="18sp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/complements"
+        android:textSize="18sp"
+        android:layout_above="@+id/textView36"
+        android:layout_alignStart="@+id/dies" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Fsegur"
+        android:textSize="18sp"
+        android:layout_alignBaseline="@+id/textView36"
+        android:layout_alignBottom="@+id/textView36"
+        android:layout_alignStart="@+id/complements" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/totalFactura"
+        android:textSize="18sp"
+        android:textStyle="normal|bold"
+        android:layout_alignBottom="@+id/Total "
+        android:layout_alignStart="@+id/Fsegur" />
+
+    <TextView
+        android:text="Total:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:id="@+id/Total "
+        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+        android:textStyle="normal|bold"
+        android:textSize="20sp"
+        android:layout_below="@+id/textView36"
+        android:layout_alignStart="@+id/textView36" />
+
+    <TextView
+        android:text="Dades del vehicle:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:id="@+id/textView27"
+        android:textStyle="normal|bold"
+        android:textSize="18sp"
+        android:layout_marginStart="39dp"
+        android:layout_below="@+id/textView26"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
