--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_marca.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_marca.xml
@@ -12,8 +12,9 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/id"
         android:layout_marginStart="18dp"
-        android:textSize="24sp"
-        android:textStyle="normal|bold" />
+        android:textSize="20sp"
+        android:textStyle="normal|bold"
+        android:textAlignment="viewEnd" />
 
     <TextView
         android:text="TextViewaaaaaaa"
