--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_marca.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_marca.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_nou_marca"
     android:layout_width="match_parent"
@@ -10,36 +11,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philippe.basedades.NouMarca">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/spinnerMarca"
+        android:layout_below="@+id/textView20"
+        android:layout_alignStart="@+id/nmarcas" />
+
     <TextView
         android:text="Nova Marca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
         android:id="@+id/textView18"
         android:textStyle="normal|bold"
         android:textSize="36sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Llistat de marques"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView20"
-        android:layout_below="@+id/guardarMarca"
-        android:layout_alignStart="@+id/textView19"
-        android:layout_marginTop="16dp"
-        android:textSize="30sp"
-        android:textStyle="normal|bold"
-        android:layout_alignParentEnd="true" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:id="@+id/spinnerMarca"
-        android:layout_below="@+id/textView20"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="Nom:"
@@ -48,17 +35,9 @@
         android:id="@+id/textView21"
         android:textSize="24sp"
         android:textStyle="normal|bold"
-        android:layout_above="@+id/guardarMarca"
-        android:layout_toStartOf="@+id/textView18"
-        android:layout_marginBottom="54dp" />
-
-    <Button
-        android:text="Guardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guardarMarca"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/textView18"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -69,6 +48,45 @@
         android:id="@+id/nmarcas"
         android:layout_alignBaseline="@+id/textView21"
         android:layout_alignBottom="@+id/textView21"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="24dp" />
+        android:layout_alignStart="@+id/textView18"
+        android:layout_marginStart="28dp" />
+
+    <Button
+        android:text="Guardar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guardarMarca"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/nmarcas"
+        android:layout_alignEnd="@+id/nmarcas" />
+
+    <TextView
+        android:text="Llistat de marques"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView20"
+        android:textSize="30sp"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/guardarMarca"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView47"
+        android:layout_marginTop="125dp"
+        android:layout_below="@+id/textView20"
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_revert"
+        android:id="@+id/marcainici"
+        android:layout_marginTop="31dp"
+        android:layout_below="@+id/textView47"
+        android:layout_alignEnd="@+id/textView47" />
+
 </RelativeLayout>
