--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_model.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_model.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_nou_model"
     android:layout_width="match_parent"
@@ -9,36 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.philippe.basedades.NouModel">
-
-    <TextView
-        android:text="Nou Model"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:id="@+id/textView17"
-        android:textStyle="normal|bold"
-        android:textSize="36sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView17"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="69dp"
-        android:id="@+id/spinnerModel" />
-
-    <TextView
-        android:text="Marca"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/spinnerModel"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="29dp"
-        android:id="@+id/textView22"
-        android:textSize="24sp"
-        android:textStyle="normal|bold" />
 
     <TextView
         android:text="Model:"
@@ -93,5 +64,42 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dp"
         android:id="@+id/guardarmodel" />
+
+    <TextView
+        android:text="Nou Model"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView17"
+        android:textStyle="normal|bold"
+        android:textSize="36sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:id="@+id/spinnerModel"
+        android:layout_below="@+id/textView17"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Marca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView22"
+        android:textSize="24sp"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/textView17"
+        android:layout_marginTop="39dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_revert"
+        android:id="@+id/modelinici"
+        android:layout_below="@+id/guardarmodel"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="27dp" />
 
 </RelativeLayout>
