--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_inici.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_inici.xml
@@ -20,6 +20,7 @@
 
         <RadioButton
             android:text="Segur a tercers"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/segur"
