--- a/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_model.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/layout/activity_nou_model.xml
@@ -34,17 +34,6 @@
         android:layout_alignBottom="@+id/textView23"
         android:layout_alignStart="@+id/textView17" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="preu..."
-        android:ems="10"
-        android:id="@+id/npreu"
-        android:layout_alignBaseline="@+id/textView24"
-        android:layout_alignBottom="@+id/textView24"
-        android:layout_alignStart="@+id/nmodel" />
-
     <TextView
         android:text="Preu:"
         android:layout_width="wrap_content"
@@ -55,15 +44,6 @@
         android:layout_below="@+id/nmodel"
         android:layout_alignEnd="@+id/textView23"
         android:layout_marginTop="24dp" />
-
-    <Button
-        android:text="Guardar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/npreu"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
-        android:id="@+id/guardarmodel" />
 
     <TextView
         android:text="Nou Model"
@@ -98,8 +78,29 @@
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_revert"
         android:id="@+id/modelinici"
-        android:layout_below="@+id/guardarmodel"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="27dp" />
+        android:layout_marginTop="69dp"
+        android:layout_below="@+id/textView24"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Guardar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_marginTop="17dp"
+        android:id="@+id/guardarmodel"
+        android:layout_alignTop="@+id/modelinici"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/npreu"
+        android:layout_alignBaseline="@+id/textView24"
+        android:layout_alignBottom="@+id/textView24"
+        android:layout_alignStart="@+id/nmodel"
+        android:hint="preu..." />
 
 </RelativeLayout>
