--- a/AndroidStudioProjects/BaseDades/app/src/main/res/menu/menu_item.xml
+++ b/AndroidStudioProjects/BaseDades/app/src/main/res/menu/menu_item.xml
@@ -4,7 +4,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android">
 
     ]]>
-    <item android:title="informació..."
+    <item android:title="Informació..."
     android:id="@+id/info" />
     <item android:title="Noves dades">
         <menu >
@@ -18,4 +18,8 @@ xmlns:android="http://schemas.android.com/apk/res/android">
     </item>
     <item android:title="Lloguers realitzats"
         android:id="@+id/keyss" />
+    <item android:title="Localització"
+        android:id="@+id/local" />
+    <item android:title="Eixir"
+        android:id="@+id/ix" />
 </menu>
